@@ -17,7 +17,7 @@ if (!defined('ABSPATH')) {
     exit; // Exit if accessed directly.
 }
 $current_wallet_amount = apply_filters('woo_wallet_partial_payment_amount', woo_wallet()->wallet->get_wallet_balance(get_current_user_id(), 'edit'));
-if(!$current_wallet_amount){
+if($current_wallet_amount == 0){
     return;
 }
 $rest_amount = get_woowallet_cart_total() - $current_wallet_amount;
